Fix collapse

--- a/src/plonetheme.aclarknet/plonetheme/aclarknet/theme/aclarknet/static/css/plone.css
+++ b/src/plonetheme.aclarknet/plonetheme/aclarknet/theme/aclarknet/static/css/plone.css
@@ -726,7 +726,6 @@ img.aligncenter {
 #logo .slogan {
     font: italic 18px Georgia,"Times New Roman",Times,serif;
     margin-left: 2.0em;
-    letter-spacing: 2.5px;
     text-transform: lowercase;
 }
 
